# HF_diversity

./: Makefile  README.md  pyproject.toml
.github/: secret_scanning.yml
HF_diversity/HF_diversity/codes/: HF_models_extraction.ipynb  hf_org_members.py  test.csv  women_commits.csv
i2rced/i2rced/codes/: HF_models_extraction.ipynb  Total_organisations.ipynb  author_commits_gender.csv  commit_data.csv  hf_org_members.py  organisations_summary.csv  plots-answers.ipynb  test2.csv  types_commits.ipynb
i2rced/i2rced/organisations/: kappa.ipynb
models/: complete_googlePro.ipynb  expl_googleFlash.ipynb  expl_googlePro.ipynb  kappa.ipynb  pilot_anthropic.csv
notebooks and codes/: HF_models_extraction.ipynb  Total_organisations.ipynb  commits_expl.ipynb  gh_users_from_hf.py  plots-answers.ipynb  types_commits.ipynb
